--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,8 +55,8 @@ jobs:
         shell: powershell
         run: |
           New-Item -Path .\.sonar\scanner -ItemType Directory
-          # dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
-          dotnet restore
+          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner
+          # dotnet restore
       - name: Build and analyze
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
