--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/setup-dotnet@v1
         with:
           # Optional SDK version(s) to use. If not provided, will install global.json version when available. Examples: 2.2.104, 3.1, 3.1.x
-          dotnet-version: 6.0
+          dotnet-version: 6.0.*
       - name: Set up JDK 11
         uses: actions/setup-java@v1
         with:
